--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,14 @@ services:
       - ~/mytestdb:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    pgadmin:
-      image: dbpage/pgadmin4
-      container_name: my-pgadmin
-      restart: always
-      environment:
-        PGADMIN_DEFAULT_EMAIL: admin@admin.com
-        PGADMIN_DEFAULT_PASSWORD: admin123
-      ports:
-        - "8080:80"
-      depends_on:
-        - postgres
+  pgadmin:
+    image: dpage/admin4
+    container_name: my-pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin123
+    ports:
+      - "8080:80"
+    depends_on:
+      - postgres
