--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "5432:5432"
   pgadmin:
-    image: dpage/admin4
+    image: dpage/admin4:latest
     container_name: my-pgadmin
     restart: always
     environment:
